// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android AnimateAndFade should render correctly 1`] = `
<View
  animateOnEnter={false}
  animateOnLeave={false}
  collapsable={undefined}
  duration={200}
  show={true}
  style={
    Object {
      "height": 0.01,
      "overflow": "hidden",
    }
  }
>
  <View
    onLayout={[Function]}
  >
    <View
      collapsable={undefined}
      style={
        Object {
          "opacity": 0.01,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android AnimateAndFade should render correctly when show is false 1`] = `
<View
  animateOnEnter={false}
  animateOnLeave={false}
  collapsable={undefined}
  duration={200}
  show={false}
  style={
    Object {
      "height": 0.01,
      "overflow": "hidden",
    }
  }
>
  <View
    onLayout={[Function]}
  >
    <View
      collapsable={undefined}
      style={
        Object {
          "opacity": 0.01,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android AnimateAndFade should render correctly with animateOnEnter 1`] = `null`;

exports[`Android AnimateAndFade should render correctly with animateOnLeave 1`] = `
<View
  animateOnEnter={false}
  animateOnLeave={true}
  collapsable={undefined}
  duration={200}
  show={true}
  shown={true}
  style={
    Object {
      "height": 0.01,
      "overflow": "hidden",
    }
  }
>
  <View
    onLayout={[Function]}
  >
    <View
      collapsable={undefined}
      style={
        Object {
          "opacity": 0.01,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
      </Text>
    </View>
  </View>
</View>
`;
